--- a/Airports/Resources/Base.lproj/Main.storyboard
+++ b/Airports/Resources/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Wne-Jl-ICC">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="CZl-h6-vrn">
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="city..." id="CZl-h6-vrn">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
@@ -124,6 +124,10 @@
                             <constraint firstItem="Wne-Jl-ICC" firstAttribute="leading" secondItem="n5U-dw-qxv" secondAttribute="leading" id="dJ1-PS-fgW"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="citiesTableView" destination="Wne-Jl-ICC" id="DvE-PO-5kE"/>
+                        <outlet property="searchBar" destination="CZl-h6-vrn" id="gnh-G5-q9i"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hwm-rZ-e2c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
